--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
@@ -5,6 +7,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
+<style type="text/css">
 h1{
   color:#d98ba6;
   border:solid 1px;
@@ -46,6 +49,8 @@ a{
 #board{
   position:absolute;
 }
+  </style>
+  </head>
 
 <div class="container">
   <div id="board">
@@ -90,3 +95,4 @@ a{
   </div>
   </div>
 </div>
+</html>
