--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <html>
 <head>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" />
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
+<script>
+  $(document).ready(function(){ 
+$("p").addClass("animated slideInLeft");
+$(".box1").addClass("animated tada");
+$(".box4").addClass("animated swing");
+$(".box5").addClass("animated fadeInUpBig");
+$(".box6").addClass("animated lightSpeedIn");
+$(".box7").addClass("animated hinge");
+$(".box8").addClass("animated zoomIn");
+$(".box9").addClass("animated flash");
+});
+  </script>
 
 <style type="text/css">
 h1{
