--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="index.css">
@@ -15,6 +16,7 @@
 
   </head>
 
+<body>
 <div class="container">
   <div id="board">
   <img src="https://s9.postimg.cc/ht92ikbjz/check-in-grid.jpg" class="img-responsive">
@@ -58,4 +60,5 @@
   </div>
   </div>
 </div>
+</body>
 </html>
