--- a/index.html
+++ b/index.html
@@ -13,9 +13,50 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-
   </head>
+<style>
+  </h1{
+  color:#d98ba6;
+  border:solid 1px;
+}
+p{
+  border:solid 1px;
+}
+body{
+  color:#ae8bd9;
+}
+a{
+  color:#fff;
+  background:#f8e83b;
+  padding:0px 2px 0px 2px;
+  margin-right:1px;
+}
+.container{
+  top:10px;
+  left:100px;
+  max-width:575px;
+}
+.col-xs-4{
+}
+.img{
+  width:100%;
+}
+.box3{border:#d98ba6 outset 5px;
+}
+.box4{color:#999999;
+  border:dashed 1px;
+}
+.box5{color:#fedcde;
+  border:solid 2px;
+}
+.box6{color:#fef19c;
+  border:dotted 5px;
+}
 
+#board{
+  position:absolute;
+}
+</style>
 <body>
 <div class="container">
   <div id="board">
