--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  </head>
-<style>
-  </h1{
+<style type="text/css">
+  h1{
   color:#d98ba6;
   border:solid 1px;
 }
@@ -57,6 +56,8 @@ a{
   position:absolute;
 }
 </style>
+  </head>
+
 <body>
 <div class="container">
   <div id="board">
