--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="/index.css">
+<link rel="stylesheet" type="text/css" src="index.css">
   <link rel="stylesheet" type="text/javascript" href="index.js"></script>
   <link rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
