--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link href="index.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/javascript" href="index.js"></script>
+<link href="style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/javascript" href="style.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 <!-- or -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
