--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 <link href="style.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/javascript" href="style.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-<!-- or -->
+<link rel="stylesheet" type="text/javascript" href="style.js">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" />
