--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script>
 $(document).ready(function(){ 
 $("p").addClass("animated slideInLeft");
-$('.box1').addClass('animated tada');
+$(".box1").addClass("animated tada");
 $(".box4").addClass("animated swing");
 $(".box5").addClass("animated fadeInUpBig");
 $(".box6").addClass("animated lightSpeedIn");
