--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ $(".box9").addClass("animated flash");
   </script>
   </head>
 
+  <body>
 <div class="container">
   <div id="board">
   <img src="https://s9.postimg.cc/ht92ikbjz/check-in-grid.jpg" class="img-responsive">
@@ -65,5 +66,5 @@ $(".box9").addClass("animated flash");
   </div>
   </div>
 </div>
-
+  </body>
 </html>
