--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link href="style.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" />
@@ -20,6 +19,50 @@ $(".box8").addClass("animated zoomIn");
 $(".box9").addClass("animated flash");
 });
   </script>
+  
+  <style type="text/css">
+    h1{
+  color:#d98ba6;
+  border:solid 1px;
+}
+p{
+  border:solid 1px;
+}
+body{
+  color:#ae8bd9;
+}
+a{
+  color:#fff;
+  background:#f8e83b;
+  padding:0px 2px 0px 2px;
+  margin-right:1px;
+}
+.container{
+  top:10px;
+  left:100px;
+  max-width:575px;
+}
+.col-xs-4{
+}
+.img{
+  width:100%;
+}
+.box3{border:#d98ba6 outset 5px;
+}
+.box4{color:#999999;
+  border:dashed 1px;
+}
+.box5{color:#fedcde;
+  border:solid 2px;
+}
+.box6{color:#fef19c;
+  border:dotted 5px;
+}
+
+#board{
+  position:absolute;
+    }
+  </style>
   </head>
 
   <body>
