--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+<!--JS SCRIPTS-->  
 <script>
 $(document).ready(function(){ 
 $("p").addClass("animated slideInLeft");
@@ -19,7 +21,8 @@ $(".box8").addClass("animated zoomIn");
 $(".box9").addClass("animated flash");
 });
   </script>
-  
+
+<!--CSS STYLE-->
   <style type="text/css">
     h1{
   color:#d98ba6;
@@ -65,7 +68,8 @@ a{
   </style>
   </head>
 
-  <body>
+<!--HTML CODE-->
+<body>
 <div class="container">
   <div id="board">
   <img src="https://s9.postimg.cc/ht92ikbjz/check-in-grid.jpg" class="img-responsive">
