--- a/2d.html
+++ b/2d.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<link rel="stylesheet" href="style.css" type="text/css>
+<link rel="stylesheet" href="style.css" type="text/css">
 </head>
                                               
 <h1>2d projects</h1>
