--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-<link rel="stylesheet" href="https://jieuuniverse.github.io/style.css" type="text/css">
+
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -23,7 +23,49 @@ $(".box9").addClass("animated flash");
   </script>
 
 <!--CSS STYLE-->
-  
+  <style type="text/css">
+    h1{
+  color:#d98ba6;
+  border:solid 1px;
+}
+p{
+  border:solid 1px;
+}
+body{
+  color:#ae8bd9;
+}
+a{
+  color:#fff;
+  background:#f8e83b;
+  padding:0px 2px 0px 2px;
+  margin-right:1px;
+}
+.container{
+  top:10px;
+  left:100px;
+  max-width:575px;
+}
+.col-xs-4{
+}
+.img{
+  width:100%;
+}
+.box3{border:#d98ba6 outset 5px;
+}
+.box4{color:#999999;
+  border:dashed 1px;
+}
+.box5{color:#fedcde;
+  border:solid 2px;
+}
+.box6{color:#fef19c;
+  border:dotted 5px;
+}
+
+#board{
+  position:absolute;
+    }
+  </style>
   </head>
 
 <!--HTML CODE-->
