--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+  <title>the jieuuniverse</title>
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
