--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ a{
 <body>
 <div class="container">
   <div id="board">
-  <img src="https://s9.postimg.cc/ht92ikbjz/check-in-grid.jpg" class="img-responsive">
+  <a href="2d.html"><img src="https://s9.postimg.cc/ht92ikbjz/check-in-grid.jpg" class="img-responsive"></a>
   </div>
   <div class="row">
 <h1 class="animated swing">challenge #1</h1>
