--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ $(".box9").addClass("animated flash");
   </script>
 
 <!--CSS STYLE-->
-  <style type="text/css">
-    h1{
+<style type="text/css">
+h1{
   color:#d98ba6;
   border:solid 1px;
 }
@@ -77,17 +77,17 @@ a{
   <img src="https://s9.postimg.cc/ht92ikbjz/check-in-grid.jpg" class="img-responsive">
   </div>
   <div class="row">
-<h1 class="animated swing">challenge #1</h1>
+<h1 class="animated swing">*folio</h1>
   </div>
 <div class="row">
   <div class="col-xs-4">
-    <a href="2d.html"><img class="img" src="https://s9.postimg.cc/c3styj0bj/image.jpg"></a>
+    <a href="2d"><img class="img" src="https://s9.postimg.cc/c3styj0bj/image.jpg"></a>
   </div>
   <div class="col-xs-4">
     <p>Sailor moon<a href="https://en.wikipedia.org/wiki/Sailor_Moon">here</a>!</p>
     </div>
     <div class="box3 col-xs-4">
-      <a href="motion.html"><img class="img" src="https://s9.postimg.cc/dvlstfz3z/image.jpg"></a>
+      <a href="motion"><img class="img" src="https://s9.postimg.cc/dvlstfz3z/image.jpg"></a>
   </div>
 </div>
   
@@ -96,7 +96,7 @@ a{
     hello this is box 4. how are you doing today this fine evening?
   </div>
   <div class="box5 col-xs-4">
-    <a href="design.html"><img class="img" src="https://s9.postimg.cc/4b266jmmn/image.jpg"></a>
+    <a href="design"><img class="img" src="https://s9.postimg.cc/4b266jmmn/image.jpg"></a>
   </div>
   <div class="box6 col-xs-4">
     hello this is box 6.
@@ -108,10 +108,10 @@ a{
     hello this is box 7. how are you doing today this sunshine-filled morning?
   </div>
   <div class="box8 col-xs-4">
-    <a href="3d.html"><img class="img" src="https://s9.postimg.cc/wnxnx0nsf/image.jpg"></a>
+    <a href="3d"><img class="img" src="https://s9.postimg.cc/wnxnx0nsf/image.jpg"></a>
   </div>
   <div class="box9 col-xs-4">
-    <a href="misc.html"><img class="img" src="https://s9.postimg.cc/x0p237lhr/image.jpg"></a>
+    <a href="misc"><img class="img" src="https://s9.postimg.cc/x0p237lhr/image.jpg"></a>
   </div>
   </div>
 </div>
