--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ p a{
     sorry, under construction at the moment!
     <div class="arrow">↯</div>
     <a style="background-color:#ff0;">창의력</a> + <a style="text-decoration:underline wavy #3b5cff;">참신성</a> 넘치는 인간 사람 = <a style="background-color:#ff0; text-decoration:underline wavy #3b5cff;">홍지은</a>!
-    <br/>현재 2018 평창 동계올림픽과 패럴림픽 자원봉사자 활동 맞추고 열심히 취업준비 중이니 <a style="color:#3b5cff; text-shadow: -1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;" href="mailto:jieun@nyu.edu">♡</a>콜은 언제든지 <a style="text-decoration:underline double #3b5cff;">환영합니다</a>.
+    <br/>현재 2018 평창 동계올림픽과 패럴림픽 자원봉사자 활동 맞추고 열심히 취업준비 중이니 <a style="color:#3b5cff; text-shadow: -1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;text-decoration:none;" href="mailto:jieun@nyu.edu">♡</a>콜은 언제든지 <a style="text-decoration:underline double #3b5cff;">환영합니다</a>.
     
 <div class="arrow">↯</div>
     
