--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ position: -webkit-sticky;
   width:auto;
   display:none;
   background-color: #fff;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Heebo', sans-serif;
   color:#000;
   font-weight:400;
   font-size:12px;
@@ -216,7 +216,7 @@ position: -webkit-sticky;
   width:auto;
   display:none;
   background-color: #fff;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Heebo', sans-serif;
   color:#000;
   font-weight:400;
   font-size:12px;
