--- a/index.html
+++ b/index.html
@@ -51,10 +51,13 @@ $(".box9").addClass("animated flash");
   padding-bottom:20px;
 }
 
-  .footer{
+.footer{
   padding-top:20px;
   padding-bottom:10px;
-  font-size:12px;
+  color:#000;
+  font-family: 'Heebo', sans-serif;
+  font-weight:300;
+  font-size:9.5px;
   text-align:center;
   position: bottom;
 }
