--- a/fairlyoddparents.html
+++ b/fairlyoddparents.html
@@ -408,6 +408,397 @@ p a:hover{
     border:none;
     z-index:30;
 	}
+@import url('https://fonts.googleapis.com/css?family=Chivo:400,400i,700,700i,900,900i|Heebo:100,300,400,700,900|Open+Sans:300,300i,400,400i,700,700i');
+
+#header{
+  position:relative;
+  background-color:#fff;
+  opacity:1;
+  z-index:20;
+  padding-bottom:5px;
+}
+
+.container{
+  max-width:750px;
+  background-color:#fff;
+  padding-left:15px;
+  padding-bottom:30px;
+}
+
+.footer{
+  padding-top:20px;
+  padding-bottom:10px;
+  color:#000;
+  font-family: 'Heebo', sans-serif;
+  font-weight:400;
+  font-size:9.5px;
+  text-align:center;
+  position: bottom;
+}
+
+h1{
+  position:relative;
+  display:inline-block;
+  margin-right:5px;
+  background-color:#fff;
+  color:#3b5cff;
+  font-family: 'Chivo', sans-serif;
+  font-weight:700;
+  font-size:64px;
+  text-shadow:-1px 1px 0 #000, -4px 4px 0 #ff0, -5px 5px 0 #000;
+  z-index:none;
+}
+
+h1 a, h1 a:hover{
+  background-color:#fff;
+  color:#3b5cff;
+  font-family: 'Chivo', sans-serif;
+  font-weight:900;
+  font-size:64px;
+  text-shadow:-1px 1px 0 #000, -4px 4px 0 #ff0, -5px 5px 0 #000;
+  text-decoration:none;
+  cursor:crosshair;
+}
+
+h3{
+  color:#000;
+  background-color:none;
+  display:inline-block;
+  font-family: 'Heebo', sans-serif;
+  font-weight:400;
+  font-size:16px;
+  -moz-transition: 2.5s, 1s;  
+  -webkit-transition: 2.5s, 1s;
+  z-index:10;
+  margin-right:15px;
+}
+
+h3 a, h3 a:hover{
+  color:#000;
+  cursor:crosshair;
+  text-decoration:none;
+}
+
+h3:hover{
+  color:#000;
+  background-color:#ff0;
+  -moz-transition: .5s ease-in-out;  
+  -webkit-transition: .5s ease-in-out;
+}
+
+.navbar{
+  background-color:#fff;
+  position: -webkit-sticky;
+  position: sticky;
+  top:0;
+  margin-left:-40px;
+  z-index:40;
+  border: solid 1px #000;
+  border-radius:0px;
+}
+
+.menu{
+position: -webkit-sticky;
+  position: sticky;
+  top:0;
+  z-index:40;
+}
+
+.nav{
+  display:inline-block;
+  float:left;
+  margin-right:none;
+  color:#3b5cff;
+  font-family: 'Chivo', sans-serif;
+  font-weight:700;
+  font-size:28px;
+  text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
+  -moz-transition: 3s, 1.5s;  
+  -webkit-transition: 3s, 1.5s;
+  cursor:crosshair;
+}
+
+.nav a{
+  color:#3b5cff;
+  font-family: 'Chivo', sans-serif;
+  font-weight:700;
+  font-size:28px;
+  text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
+  text-decoration:none;
+  -moz-transition: 1s ease-in-out;  
+  -webkit-transition: 1s ease-in-out;
+  cursor:crosshair;
+}
+
+.nav a:hover{
+  background-color:none;
+  cursor:crosshair;
+}
+
+.nav:hover .dropdown1{
+  display:block;
+  float:none;
+}
+
+
+.toggle,
+[id^=drop] {
+	display: none;
+  color:#fff;
+  font-family: 'Chivo', sans-serif;
+  font-weight:700;
+  font-size:28px;
+  text-shadow: -3px 2px 0 #000, -4px 3px 0 #ff0;
+  -moz-transition: 3s, 1.5s;  
+  -webkit-transition: 3s, 1.5s;
+}
+
+
+.dropdown{
+  position:absolute;
+  width:auto;
+  display:none;
+  background-color: #fff;
+  font-family: 'Heebo', sans-serif;
+  color:#000;
+  font-weight:400;
+  font-size:12px;
+  text-shadow:none;
+}
+
+.dropdown a{
+  width:100%;
+  color: #000;
+  font-family: 'Heebo', sans-serif;
+  font-weight:300;
+  font-size:12px;
+  text-shadow:none;
+  text-decoration: none;
+  display: block;
+  padding: 5px 5px 3px 5px;
+  border-bottom: solid 1px #000;
+}
+
+.dropdown a:hover{
+  color:#000;
+  background-color:#ff0;
+}
+
+.nav:hover .dropdown{
+  display:block;
+  float:none;
+}
+
+.dropdown1{
+  position:absolute;
+  width:auto;
+  display:none;
+  background-color: #fff;
+  font-family: 'Heebo', sans-serif;
+  color:#000;
+  font-weight:400;
+  font-size:12px;
+  text-shadow:none;
+}
+
+body{
+  color:#000;
+}
+
+p{
+  margin-top:-25px;
+  font-family: 'Heebo', sans-serif;
+  font-weight:300;
+  line-height:22px;
+}
+
+p a{
+  background-color:#ff0;
+  color:#000;
+  cursor:crosshair;
+}
+
+p a:hover{
+  color:#000;
+  text-decoration:none;
+  cursor:crosshair;
+}
+
+.img{
+  width:100%;
+}
+
+.projects{
+  position:relative;
+  padding-top:0px;
+}
+
+.pimage{
+ padding-top:75px;
+}
+
+.pvideo{
+ padding-top:75px;
+}
+
+.desc{
+  position:relative;
+  padding:15px 15px 15px 25px;
+  margin-left:4px;
+  margin-bottom:100px;
+  top:35px;
+  background-color:#fff;
+  color:#000;
+  border:solid 1px #000;
+  font-family: 'Heebo', sans-serif;
+  font-weight:300;
+  box-shadow: 0px 0px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;
+  line-height:22px;
+}
+
+.desc a{
+  background-color:#ff0;
+  color:#000;
+  cursor:crosshair;
+}
+
+.desc a:hover{
+  background-color:#ff0;
+  color:#000;
+  text-decoration:none;
+  cursor:crosshair;
+}
+
+.intro{
+  position:relative;
+  padding:25px 25px 25px 35px;
+  top:75px;
+  margin-left:7px;
+  margin-bottom:100px;
+  background-color:#fff;
+  color:#000;
+  border:solid 2px #000;
+  font-family: 'Chivo', sans-serif;
+  font-weight:400;
+  font-size:calc(11px + 1.5vw);
+  text-shadow:none;
+  box-shadow: 0px 0px 0 #000, -5px 5px 0 #ff0, -7px 7px 0 #000;
+  line-height:calc(36px + 1.5vw);
+}
+
+.arrow{
+  font-size:calc(36px + 1.5vw);
+  text-align:center;
+  padding:calc(33px + 1.5vw) 0px calc(35px + 1.5vw) 0px;
+}
+
+
+
+/*** START OF MEDIA QUERIES!!!! ***/
+@media screen and (min-width: 1280px){
+  
+  .about{
+    font-size: 29px;
+  }
+  
+  .desc{ 
+  }
+  
+}
+
+
+@media only screen and (max-width:768px){
+  .dropdown1 a{
+  width:100%;
+  color: #000;
+  font-family: 'Heebo', sans-serif;
+  font-weight:300;
+  font-size:12px;
+  text-shadow:none;
+  text-decoration: none;
+  display: block;
+  padding-top:5px;
+  padding-bottom:5px;
+  border-bottom: solid 1px #000;
+}
+  
+.dropdown1 a:hover{
+  color:#000;
+  background-color:#ff0;
+}
+  
+  .nav{
+    width:100%;
+    float:left;
+    margin-left:none;
+    position:relative;
+  }
+ 
+  .navbar{
+    position:relative;
+    margin-left:none;
+  }
+  
+ .nav:hover .dropdown{
+  display:none;
+}
+  	/* Hide the navigation menu by default */
+	/* Also hide the  */
+	.toggle + a, .menu{
+    position: -webkit-sticky;
+    position: sticky;
+    top:40px;
+    display:none;
+    color:#3b5cff;
+    font-family: 'Chivo', sans-serif;
+    font-weight:700;
+    font-size:28px;
+    text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
+    -moz-transition: 3s, 1.5s;  
+    -webkit-transition: 3s, 1.5s;
+    z-index:40;
+	}
+
+  .dropdown1{
+   position:relative;
+    display:none;
+    color:#3b5cff;
+    font-family: 'Chivo', sans-serif;
+    font-weight:700;
+    font-size:28px;
+    text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
+    -moz-transition: 3s, 1.5s;  
+    -webkit-transition: 3s, 1.5s;
+    z-index:30;
+	}
+  
+  
+	/* Styling the toggle lable */
+	.toggle{
+    position: -webkit-sticky;
+    position: sticky;
+    top:0;
+    padding-left:10px;
+		display: block;
+    background-color:#fff;
+    opacity:1;
+    color:#3b5cff;
+    font-family: 'Chivo', sans-serif;
+    font-weight:700;
+    font-size:28px;
+    text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
+    border:solid 1px #000;
+    -moz-transition: 3s, 1.5s;  
+    -webkit-transition: 3s, 1.5s; 
+    z-index:40;
+	}
+  
+  .toggle2{
+    position: relative;
+    padding-left:0;
+    border:none;
+    z-index:30;
+	}
 
 	.toggle:hover {
 		
@@ -529,19 +920,21 @@ p a:hover{
 -->
    </div>
       </div>
-	</ul>
+  </ul>
   
   
 <div class="projects"> 
   <div class="pvideo" id="1">
 <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/233913346' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
-   <div class="desc">&nbsp;</div>
-    <p>Say cheese <a href="">cow mascarpone</a>. Cheese slices airedale edam cauliflower cheese blue castello st. agur blue cheese caerphilly stinking bishop. Chalk and cheese brie cheesy feet when the cheese comes out everybody's happy cheese triangles fondue cheese strings chalk and cheese. Monterey jack when the cheese comes out everybody's happy when the cheese comes out everybody's happy dolcelatte cheeseburger emmental cheesecake chalk and cheese. Gouda cheese and biscuits manchego stinking bishop caerphilly macaroni cheese cut the cheese paneer. Cut the cheese chalk and cheese halloumi cheesy grin halloumi say cheese emmental cheese and biscuits. Danish fontina mascarpone queso cheese and wine rubber cheese everyone loves bavarian bergkase cheese and biscuits. When the cheese comes out everybody's happy.</p>
   </div>
-</div>
  
+ <div class="desc">
+  Say cheese <a href="">cow mascarpone</a>. Cheese slices airedale edam cauliflower cheese blue castello st. agur blue cheese caerphilly stinking bishop. Chalk and cheese brie cheesy feet when the cheese comes out everybody's happy cheese triangles fondue cheese strings chalk and cheese. Monterey jack when the cheese comes out everybody's happy when the cheese comes out everybody's happy dolcelatte cheeseburger emmental cheesecake chalk and cheese. Gouda cheese and biscuits manchego stinking bishop caerphilly macaroni cheese cut the cheese paneer. Cut the cheese chalk and cheese halloumi cheesy grin halloumi say cheese emmental cheese and biscuits. Danish fontina mascarpone queso cheese and wine rubber cheese everyone loves bavarian bergkase cheese and biscuits. When the cheese comes out everybody's happy.
+    </div> 
+  </div>
   </div>
 
+  
   <div class="footer">
     &copy; 2018 made in the jieuuniverse
   </div>
