--- a/index.html
+++ b/index.html
@@ -16,15 +16,8 @@
 <!--START JS SCRIPTS-->  
 <script>
 $(document).ready(function(){ 
-$(".box1").addClass("animated tada");
-$(".box2").addClass("animated flipInY");
-$(".box3").addClass("animated hinge");
-$(".box4").addClass("animated swing");
-$(".box5").addClass("animated fadeInUpBig");
-$(".box6").addClass("animated lightSpeedIn");
-$(".box7").addClass("animated lightSpeedIn");
-$(".box8").addClass("animated zoomIn");
-$(".box9").addClass("animated flash");
+  $(".projects").addClass("animated slideInUp");
+  $(".intro").addClass("animated slideInUp");
 });
 </script>
 <!--END JS SCRIPTS-->  
@@ -34,7 +27,7 @@ $(".box9").addClass("animated flash");
   
 <!--START CSS STYLE-->
 <style type="text/css">
-@import url('https://fonts.googleapis.com/css?family=Chivo:400,400i,700,700i,900,900i|Noto+Sans:400,400i,700,700i|Heebo:100,300,400,700,900|Open+Sans:300,300i,400,400i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Chivo:400,400i,700,700i,900,900i|Heebo:100,300,400,700,900|Open+Sans:300,300i,400,400i,700,700i');
 
 #header{
   position:relative;
@@ -48,7 +41,7 @@ $(".box9").addClass("animated flash");
   max-width:750px;
   background-color:#fff;
   padding-left:15px;
-  padding-bottom:20px;
+  padding-bottom:30px;
 }
 
 .footer{
@@ -61,7 +54,7 @@ $(".box9").addClass("animated flash");
   text-align:center;
   position: bottom;
 }
-	
+
 h1{
   position:relative;
   display:inline-block;
@@ -90,7 +83,7 @@ h3{
   color:#000;
   background-color:none;
   display:inline-block;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Heebo', sans-serif;
   font-weight:400;
   font-size:16px;
   -moz-transition: 2.5s, 1s;  
@@ -247,32 +240,47 @@ p a{
 
 .projects{
   position:relative;
-  padding-top:100px;
+  padding-top:0px;
 }
 
 .pimage{
- padding-top:100px;
+ padding-top:75px;
 }
 
 .desc{
   position:relative;
-  left:1px;
-  top:-35px;
-  background-color:none;
-  color:#fff;
-  border:none;
-  font-family: 'Chivo', sans-serif;
-  font-weight:700;
-  font-size:calc(22px + 1.5vw);
-  text-shadow: -1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
+  padding:15px 15px 15px 25px;
+  margin-left:4px;
+  margin-bottom:75px;
+  margin-top:35px;
+  background-color:#fff;
+  color:#000;
+  border:solid 1px #000;
+  font-family: 'Heebo', sans-serif;
+  font-weight:300;
+  box-shadow: 0px 0px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;
+  line-height:22px;
+}
+
+.desc a{
+  background-color:#ff0;
+  color:#000;
+  cursor:crosshair;
+}
+
+.desc a:hover{
+  background-color:#ff0;
+  color:#000;
+  text-decoration:none;
+  cursor:crosshair;
 }
 
 .intro{
   position:relative;
   padding:25px 25px 25px 35px;
-  top:75px;
+  margin-top:75px;
   margin-left:7px;
-  margin-bottom:100px;
+  margin-bottom:75px;
   background-color:#fff;
   color:#000;
   border:solid 2px #000;
@@ -427,6 +435,7 @@ p a{
   
   
 <!--START HTML CODE-->
+<html>
 <div class="container">
 <div id="header">
   <h1 class="animated swing"><a href="/">안녕,</a></h1>
@@ -519,7 +528,7 @@ p a{
   <div class="intro">
     <i><a style="color:#3b5cff; font-weight:700; font-size:calc(30px + 1.5vw); text-shadow:-1px 1px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">notice,</a></i>
     <br/><br/>
-    현재 공사중이며 양해 부탁드립니다. 죄송합니다!
+    공사중입니다. 양해 부탁드립니다.
     <br/>
     sorry, under construction at the moment!
     <div class="arrow">↯</div>
@@ -530,9 +539,9 @@ p a{
     
 creative human being a.k.a. <a style="background-color:#ff0; text-decoration:underline wavy #3b5cff;">jieun</a>!
     <br/>looking for opportunities to share my growing potential after recently wrapping up volunteering at the 2018 pyeongchang winter olympics and paralympics. <a style="color:#3b5cff; text-shadow: -1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000; text-decoration:none;" href="mailto:jieun@nyu.edu">e-mails</a> are always <a style="text-decoration:underline double #3b5cff;">welcome</a>.
-</div>
   </div>
-	
+  </div>
+  
   <div class="footer">
     &copy; 2018 made in the jieuuniverse
   </div>
