--- a/fairlyoddparents.html
+++ b/fairlyoddparents.html
@@ -17,15 +17,8 @@
 <!--START JS SCRIPTS-->  
 <script>
 $(document).ready(function(){ 
-$(".box1").addClass("animated tada");
-$(".box2").addClass("animated flipInY");
-$(".box3").addClass("animated hinge");
-$(".box4").addClass("animated swing");
-$(".box5").addClass("animated fadeInUpBig");
-$(".box6").addClass("animated lightSpeedIn");
-$(".box7").addClass("animated lightSpeedIn");
-$(".box8").addClass("animated zoomIn");
-$(".box9").addClass("animated flash");
+  $(".projects").addClass("animated slideInUp");
+  $(".intro").addClass("animated slideInUp");
 });
 </script>
 <!--END JS SCRIPTS-->  
@@ -236,379 +229,6 @@ p{
   margin-top:-25px;
   font-family: 'Heebo', sans-serif;
   font-weight:300;
-}
-
-p a{
-  background-color:#ff0;
-  color:#000;
-  cursor:crosshair;
-}
-
-p a:hover{
-  color:#000;
-  text-decoration:none;
-  cursor:crosshair;
-}
-
-.img{
-  width:100%;
-}
-
-.projects{
-  position:relative;
-  padding-top:0px;
-}
-
-.pimage{
- padding-top:75px;
-}
-
-.pvideo{
- padding-top:75px;
-}
-
-.desc{
-  position:relative;
-  left:1px;
-  top:-35px;
-  background-color:none;
-  color:#fff;
-  border:none;
-  font-family: 'Chivo', sans-serif;
-  font-weight:700;
-  font-size:calc(22px + 1.5vw);
-  text-shadow: -1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
-}
-
-.about{
-  position:relative;
-  top:60px;
-  margin-left:7px;
-  margin-bottom:100px;
-  background-color:#fff;
-  color:#000;
-  border:none;
-  font-family: 'Chivo', sans-serif;
-  font-weight:400;
-  font-size:calc(8px + 1.5vw);
-  text-shadow:none;
-  line-height:calc(30px + 1.5vw);
-}
-
-.arrow{
-  font-size:calc(38px + 1.5vw);
-  text-align:center;
-  padding:calc(35px + 1.5vw) 0px calc(35px + 1.5vw) 0px;
-}
-
-
-
-/*** START OF MEDIA QUERIES!!!! ***/
-@media screen and (min-width: 1280px){
-  
-  .about{
-    font-size: 29px;
-  }
-  
-  .desc{ 
-  }
-  
-}
-
-
-@media only screen and (max-width:768px){
-  .dropdown1 a{
-  width:100%;
-  color: #000;
-  font-family: 'Heebo', sans-serif;
-  font-weight:300;
-  font-size:12px;
-  text-shadow:none;
-  text-decoration: none;
-  display: block;
-  padding-top:5px;
-  padding-bottom:5px;
-  border-bottom: solid 1px #000;
-}
-  
-.dropdown1 a:hover{
-  color:#000;
-  background-color:#ff0;
-}
-  
-  .nav{
-    width:100%;
-    float:left;
-    margin-left:none;
-    position:relative;
-  }
- 
-  .navbar{
-    position:relative;
-    margin-left:none;
-  }
-  
- .nav:hover .dropdown{
-  display:none;
-}
-  	/* Hide the navigation menu by default */
-	/* Also hide the  */
-	.toggle + a, .menu{
-    position: -webkit-sticky;
-    position: sticky;
-    top:40px;
-    display:none;
-    color:#3b5cff;
-    font-family: 'Chivo', sans-serif;
-    font-weight:700;
-    font-size:28px;
-    text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
-    -moz-transition: 3s, 1.5s;  
-    -webkit-transition: 3s, 1.5s;
-    z-index:40;
-	}
-
-  .dropdown1{
-   position:relative;
-    display:none;
-    color:#3b5cff;
-    font-family: 'Chivo', sans-serif;
-    font-weight:700;
-    font-size:28px;
-    text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
-    -moz-transition: 3s, 1.5s;  
-    -webkit-transition: 3s, 1.5s;
-    z-index:30;
-	}
-  
-  
-	/* Styling the toggle lable */
-	.toggle{
-    position: -webkit-sticky;
-    position: sticky;
-    top:0;
-    padding-left:10px;
-		display: block;
-    background-color:#fff;
-    opacity:1;
-    color:#3b5cff;
-    font-family: 'Chivo', sans-serif;
-    font-weight:700;
-    font-size:28px;
-    text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
-    border:solid 1px #000;
-    -moz-transition: 3s, 1.5s;  
-    -webkit-transition: 3s, 1.5s; 
-    z-index:40;
-	}
-  
-  .toggle2{
-    position: relative;
-    padding-left:0;
-    border:none;
-    z-index:30;
-	}
-@import url('https://fonts.googleapis.com/css?family=Chivo:400,400i,700,700i,900,900i|Heebo:100,300,400,700,900|Open+Sans:300,300i,400,400i,700,700i');
-
-#header{
-  position:relative;
-  background-color:#fff;
-  opacity:1;
-  z-index:20;
-  padding-bottom:5px;
-}
-
-.container{
-  max-width:750px;
-  background-color:#fff;
-  padding-left:15px;
-  padding-bottom:30px;
-}
-
-.footer{
-  padding-top:20px;
-  padding-bottom:10px;
-  color:#000;
-  font-family: 'Heebo', sans-serif;
-  font-weight:400;
-  font-size:9.5px;
-  text-align:center;
-  position: bottom;
-}
-
-h1{
-  position:relative;
-  display:inline-block;
-  margin-right:5px;
-  background-color:#fff;
-  color:#3b5cff;
-  font-family: 'Chivo', sans-serif;
-  font-weight:700;
-  font-size:64px;
-  text-shadow:-1px 1px 0 #000, -4px 4px 0 #ff0, -5px 5px 0 #000;
-  z-index:none;
-}
-
-h1 a, h1 a:hover{
-  background-color:#fff;
-  color:#3b5cff;
-  font-family: 'Chivo', sans-serif;
-  font-weight:900;
-  font-size:64px;
-  text-shadow:-1px 1px 0 #000, -4px 4px 0 #ff0, -5px 5px 0 #000;
-  text-decoration:none;
-  cursor:crosshair;
-}
-
-h3{
-  color:#000;
-  background-color:none;
-  display:inline-block;
-  font-family: 'Heebo', sans-serif;
-  font-weight:400;
-  font-size:16px;
-  -moz-transition: 2.5s, 1s;  
-  -webkit-transition: 2.5s, 1s;
-  z-index:10;
-  margin-right:15px;
-}
-
-h3 a, h3 a:hover{
-  color:#000;
-  cursor:crosshair;
-  text-decoration:none;
-}
-
-h3:hover{
-  color:#000;
-  background-color:#ff0;
-  -moz-transition: .5s ease-in-out;  
-  -webkit-transition: .5s ease-in-out;
-}
-
-.navbar{
-  background-color:#fff;
-  position: -webkit-sticky;
-  position: sticky;
-  top:0;
-  margin-left:-40px;
-  z-index:40;
-  border: solid 1px #000;
-  border-radius:0px;
-}
-
-.menu{
-position: -webkit-sticky;
-  position: sticky;
-  top:0;
-  z-index:40;
-}
-
-.nav{
-  display:inline-block;
-  float:left;
-  margin-right:none;
-  color:#3b5cff;
-  font-family: 'Chivo', sans-serif;
-  font-weight:700;
-  font-size:28px;
-  text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
-  -moz-transition: 3s, 1.5s;  
-  -webkit-transition: 3s, 1.5s;
-  cursor:crosshair;
-}
-
-.nav a{
-  color:#3b5cff;
-  font-family: 'Chivo', sans-serif;
-  font-weight:700;
-  font-size:28px;
-  text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
-  text-decoration:none;
-  -moz-transition: 1s ease-in-out;  
-  -webkit-transition: 1s ease-in-out;
-  cursor:crosshair;
-}
-
-.nav a:hover{
-  background-color:none;
-  cursor:crosshair;
-}
-
-.nav:hover .dropdown1{
-  display:block;
-  float:none;
-}
-
-
-.toggle,
-[id^=drop] {
-	display: none;
-  color:#fff;
-  font-family: 'Chivo', sans-serif;
-  font-weight:700;
-  font-size:28px;
-  text-shadow: -3px 2px 0 #000, -4px 3px 0 #ff0;
-  -moz-transition: 3s, 1.5s;  
-  -webkit-transition: 3s, 1.5s;
-}
-
-
-.dropdown{
-  position:absolute;
-  width:auto;
-  display:none;
-  background-color: #fff;
-  font-family: 'Heebo', sans-serif;
-  color:#000;
-  font-weight:400;
-  font-size:12px;
-  text-shadow:none;
-}
-
-.dropdown a{
-  width:100%;
-  color: #000;
-  font-family: 'Heebo', sans-serif;
-  font-weight:300;
-  font-size:12px;
-  text-shadow:none;
-  text-decoration: none;
-  display: block;
-  padding: 5px 5px 3px 5px;
-  border-bottom: solid 1px #000;
-}
-
-.dropdown a:hover{
-  color:#000;
-  background-color:#ff0;
-}
-
-.nav:hover .dropdown{
-  display:block;
-  float:none;
-}
-
-.dropdown1{
-  position:absolute;
-  width:auto;
-  display:none;
-  background-color: #fff;
-  font-family: 'Heebo', sans-serif;
-  color:#000;
-  font-weight:400;
-  font-size:12px;
-  text-shadow:none;
-}
-
-body{
-  color:#000;
-}
-
-p{
-  margin-top:-25px;
-  font-family: 'Heebo', sans-serif;
-  font-weight:300;
   line-height:22px;
 }
 
@@ -630,23 +250,23 @@ p a:hover{
 
 .projects{
   position:relative;
-  padding-top:0px;
+  margin-top:75px;
 }
 
 .pimage{
- padding-top:75px;
+ 
 }
 
 .pvideo{
- padding-top:75px;
+ 
 }
 
 .desc{
   position:relative;
   padding:15px 15px 15px 25px;
   margin-left:4px;
-  margin-bottom:100px;
-  top:35px;
+  margin-bottom:75px;
+  margin-top:35px;
   background-color:#fff;
   color:#000;
   border:solid 1px #000;
@@ -672,9 +292,9 @@ p a:hover{
 .intro{
   position:relative;
   padding:25px 25px 25px 35px;
-  top:75px;
+  margin-top:75px;
   margin-left:7px;
-  margin-bottom:100px;
+  margin-bottom:75px;
   background-color:#fff;
   color:#000;
   border:solid 2px #000;
@@ -697,8 +317,8 @@ p a:hover{
 /*** START OF MEDIA QUERIES!!!! ***/
 @media screen and (min-width: 1280px){
   
-  .about{
-    font-size: 29px;
+  .intro{
+    font-size: 30px;
   }
   
   .desc{ 
