--- a/gravity.html
+++ b/gravity.html
@@ -548,7 +548,7 @@ p a:hover{
   </div>
  
  <div class="desc">
-<b>prompt:</b> sync typography with sound.
+<b>prompt:</b> kinetic typography with sound.
    <br/>
    <b>completed:</b> 2015.
     </div> 
