--- a/salad.html
+++ b/salad.html
@@ -550,7 +550,7 @@ p a:hover{
  <div class="desc">
 <b>prompt:</b> landscape animation.
    <br/>
-   mr. toast sets sail a delicious journey to gather all the ingredients for the perfect summer picnic salad!
+   mr. toast sets sail on a delicious journey to gather all the ingredients for the perfect summer picnic salad!
    <br/>
    <b>completed:</b> 2015.
     </div> 
