--- a/fairlyoddparents.html
+++ b/fairlyoddparents.html
@@ -81,29 +81,33 @@ h1 a, h1 a:hover{
 }
 
 h3{
+  position:relative;
   color:#000;
   background-color:none;
   display:inline-block;
   font-family: 'Heebo', sans-serif;
-  font-weight:400;
-  font-size:16px;
+  font-weight:300;
+  font-size:15px;
   -moz-transition: 2.5s, 1s;  
   -webkit-transition: 2.5s, 1s;
   z-index:10;
   margin-right:15px;
+  margin-top:55px;
 }
 
-h3 a, h3 a:hover{
+h3 a{
   color:#000;
   cursor:crosshair;
   text-decoration:none;
 }
 
-h3:hover{
+h3 a:hover{
   color:#000;
+  cursor:crosshair;
   background-color:#ff0;
   -moz-transition: .5s ease-in-out;  
   -webkit-transition: .5s ease-in-out;
+  text-decoration:none;
 }
 
 .navbar{
@@ -173,7 +177,6 @@ position: -webkit-sticky;
   -webkit-transition: 3s, 1.5s;
 }
 
-
 .dropdown{
   position:absolute;
   width:auto;
@@ -181,8 +184,8 @@ position: -webkit-sticky;
   background-color: #fff;
   font-family: 'Heebo', sans-serif;
   color:#000;
-  font-weight:400;
-  font-size:12px;
+  font-weight:300;
+  font-size:14px;
   text-shadow:none;
 }
 
@@ -191,7 +194,7 @@ position: -webkit-sticky;
   color: #000;
   font-family: 'Heebo', sans-serif;
   font-weight:300;
-  font-size:12px;
+  font-size:14px;
   text-shadow:none;
   text-decoration: none;
   display: block;
@@ -216,8 +219,8 @@ position: -webkit-sticky;
   background-color: #fff;
   font-family: 'Heebo', sans-serif;
   color:#000;
-  font-weight:400;
-  font-size:12px;
+  font-weight:300;
+  font-size:14px;
   text-shadow:none;
 }
 
@@ -253,12 +256,12 @@ p a:hover{
   margin-top:75px;
 }
 
-.pimage{
- 
+.pimageextra{
+ margin-top:200px;
 }
 
-.pvideo{
- 
+.pvideoextra{
+ margin-top:200px;
 }
 
 .desc{
@@ -333,7 +336,7 @@ p a:hover{
   color: #000;
   font-family: 'Heebo', sans-serif;
   font-weight:300;
-  font-size:12px;
+  font-size:14px;
   text-shadow:none;
   text-decoration: none;
   display: block;
@@ -382,11 +385,10 @@ p a:hover{
   .dropdown1{
    position:relative;
     display:none;
-    color:#3b5cff;
-    font-family: 'Chivo', sans-serif;
-    font-weight:700;
-    font-size:28px;
-    text-shadow:-1px 1px 0 #000, -2px 2px 0 #ff0, -3px 3px 0 #000;
+    color:#000;
+    font-family: 'Heebo', sans-serif;
+    font-weight:300;
+    font-size:14px;
     -moz-transition: 3s, 1.5s;  
     -webkit-transition: 3s, 1.5s;
     z-index:30;
