--- a/salad.html
+++ b/salad.html
@@ -509,9 +509,9 @@ p a:hover{
       <a class="toggle2">motion</a>
       <input type="checkbox" id="drop-4" />
       <div class="dropdown dropdown1">
-    <a href="/">the fairly odd parents</a>
-    <a href="/">how to make a salad</a>
-    <a href="/">finding nemo</a>
+    <a href="/fairlyoddparents">the fairly odd parents</a>
+    <a href="/salad">how to make a salad</a>
+    <a href="/kinetic">kinetic typography</a>
    </div>
    </div>
     
