--- a/salad.html
+++ b/salad.html
@@ -553,7 +553,7 @@ p a:hover{
   </div>
  
  <div class="desc">
-<b>prompt:</b> landscape animation.
+<b>specs:</b> landscape animation.
    <br/>
    mr. toast sets sail on a delicious journey to gather all the ingredients for the perfect summer picnic salad!
    <br/>
