--- a/kinetic.html
+++ b/kinetic.html
@@ -556,7 +556,7 @@ p a:hover{
   </div>
  
  <div class="desc">
-   <b>prompt:</b> kinetic typography with sound.
+   <b>specs:</b> kinetic typography with sound.
    <br/>
    <b>completed:</b> 2015.
     </div>
@@ -566,7 +566,7 @@ p a:hover{
   </div>
  
  <div class="desc">
-   <b>prompt:</b> kinetic typography with dialogue.
+   <b>specs:</b> kinetic typography with dialogue.
    <br/>
    <b>completed:</b> 2015.
     </div>
