--- a/fairlyoddparents.html
+++ b/fairlyoddparents.html
@@ -554,7 +554,7 @@ p a:hover{
   </div>
  
  <div class="desc">
-  <b>prompt:</b> found sound.
+  <b>specs:</b> found sound.
    <br/>
    a modern redesign of the opening theme song animation for <i>the fairly oddparents</i> cartoon series. emphasis on typography and flat design.
    <br/>
