--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ p a:hover{
       <div class="dropdown dropdown1">
     <a href="/">vb&r</a>
     <a href="/">typography</a>
-    <a href="/">publication layout</a>
+    <a href="/layout">publication layout</a>
     <a href="/">artist services</a>
     <a href="/">dérive</a>
    </div>
