--- a/layout.html
+++ b/layout.html
@@ -592,7 +592,7 @@ p a:hover{
   </div>
  
  <div class="desc">
-   <b>specs:</b> 350+ page san marino high school <i>titanian</i> yearbook publication (vol. 59) with the theme of 'a to z'.
+   <b>specs:</b> 350+ page san marino high school <i>titanian</i> yearbook publication (vol. 59) with the theme of 'titans a to z.' by orginizing the book in an umbrella coverage format based off of alphabetical words, the goal for this theme was to capture the essence of what it means to be a titan. 
    <br/>
    <b>completed:</b> 2012.
     </div>
