--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ p a:hover{
   <div class="intro">
     <i><a style="color:#3b5cff; font-weight:700; font-size:calc(30px + 1.5vw); text-shadow:-1px 1px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">notice,</a></i>
     <br/><br/>
-    공사중입니다. 양해 부탁드립니다.
+    업데이트 중이며 양해 부탁드립니다!
     <br/>
     sorry, under construction at the moment!
     <div class="arrow">↯</div>
