--- a/fairlyoddparents.html
+++ b/fairlyoddparents.html
@@ -475,7 +475,7 @@ p a:hover{
     <a class="toggle2">2d</a>
     <input type="checkbox" id="drop-1" />
       <div class="dropdown dropdown1">
-    <a href="/">light project</a>
+    <a href="/light">light project</a>
     <a href="/">drawing</a>
     <a href="/">illustration</a>
     <a href="/">recycled photography</a>
@@ -499,7 +499,7 @@ p a:hover{
       <a class="toggle2">print</a>
       <input type="checkbox" id="drop-3" />
       <div class="dropdown dropdown1">
-    <a href="/">vb&r</a>
+    <a href="/vbr">vb&r</a>
     <a href="/">typography</a>
     <a href="/layout">publication layout</a>
     <a href="/">artist services</a>
