--- a/light.html
+++ b/light.html
@@ -562,9 +562,7 @@ p a:hover{
   </div>
  
  <div class="desc">
-  <b>specs:</b> light project.
-   <br/>
-interpretation of light in three different ways, inspired by various nightlife in the city (soft street light, distorted bokeh city skyline, and fast motion freeway lights).
+  <b>specs:</b> interpretation of light in three different ways, inspired by various nightlife in the city (soft street light, distorted bokeh city skyline, and fast motion freeway lights).
    <br/>
    <b>completed:</b> 2012.
     </div> 
