--- a/layout.html
+++ b/layout.html
@@ -547,7 +547,7 @@ p a:hover{
   </ul>
   
   <center>
-    <h3>↯ <a href="#1">mmm magazine</a></h3> <h3>↯ <a href="#2">titanian yearbook</a></h3> 
+    <h3>↯ <a href="#1">mmm magazine</a></h3> <h3>↯ <a href="#2">experimental</a></h3> <h3>↯ <a href="#3">titanian yearbook</a></h3> 
   </center>
   
 <div class="projects"> 
@@ -564,8 +564,18 @@ p a:hover{
    <br/>
    <b>completed:</b> 2015.
     </div>
-  
+	
   <div class="pimageextra" id="2">
+  <img class="img-responsive" src="https://images2.imgbox.com/4f/9c/3YTcJsM2_o.jpg">
+  </div>
+ 
+ <div class="desc">
+   <b>specs:</b> self-initiated experimental layout designs.
+   <br/>
+   <b>completed:</b> ongoing.
+    </div>
+  
+  <div class="pimageextra" id="3">
   <img class="img-responsive" src="https://images2.imgbox.com/e8/a5/ess5Qyjo_o.jpg">
     <br/>
   <img class="img-responsive" src="https://images2.imgbox.com/be/07/8ARnlOja_o.jpg">
