--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ p a:hover{
       <a class="toggle2">3d</a>
      <input type="checkbox" id="drop-2" />
    <div class="dropdown dropdown1">
-     <a href="/">holy sh*t!</a>
+     <a href="/holyshit">holy sh*t!</a>
     <a href="/">a breath of fresh air</a>
     <a href="/">wearables</a>
      <a href="/">food series</a>
