--- a/holyshit.html
+++ b/holyshit.html
@@ -38,7 +38,7 @@ $(document).ready(function(){
 }
 
 .container{
-  max-width:750px;
+  max-width:950px;
   background-color:#fff;
   padding-left:15px;
   padding-bottom:30px;
@@ -554,11 +554,11 @@ p a:hover{
     <br/>
   <img class="img-responsive" src="https://images2.imgbox.com/cc/a6/WudCAfQ5_o.jpg">
     <br/>
-  <img class="img-responsive" src="https://images2.imgbox.com/45/f8/HsDu6cIw_o.jpg"> 
+  <img class="img-responsive" src="https://images2.imgbox.com/a3/8e/uOBnMHiZ_o.jpg"> 
     <br/>
-  <img class="img-responsive" src="https://images2.imgbox.com/fd/60/NqPJO4bE_o.jpg">
+  <img class="img-responsive" src="https://images2.imgbox.com/96/f4/A17latt3_o.jpg">
     <br/>
-  <img class="img-responsive" src="https://images2.imgbox.com/2b/0d/BRSsVRzL_o.jpg">
+  <img class="img-responsive" src="https://images2.imgbox.com/c4/0b/w4QV8rjf_o.jpg">
     <br/>
   <img class="img-responsive" src="https://images2.imgbox.com/0b/86/X084esRB_o.jpg">
   </div>
