--- a/about.html
+++ b/about.html
@@ -589,7 +589,7 @@ jieun hong with a capital 'E'!
   <br/><br/>
 designed in seoul, south korea; assembled in california and packaged with a <a style="text-decoration:underline wavy #3b5cff;">bfa (studio art)</a> from <a style="background-color:#ff0;">nyu</a> in new york. international shipping available!
   <br/><br/>
-  <a style="text-decoration:underline double #3b5cff;" href="https://drive.google.com/uc?export=download&id=18qha6BRpmLt8hfEQBn4tLbYlohSivnlc" download>download resume</a>
+  <a style="text-decoration:underline double #3b5cff;" href="https://drive.google.com/file/d/18qha6BRpmLt8hfEQBn4tLbYlohSivnlc/view?usp=sharing">download resume</a>
   <br/><br/>
   <a style="font-size:14px; line-height:24px;">*warning: high amounts of strawberry cheesecake ice cream or flamin' hot ruffles will trigger endorphin overdose!</a> 
   </div>
