--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ p a:hover{
   max-width:550px;
   margin: auto;
   padding:25px 20px 20px 30px;
-  margin-top:75px;
+  margin-top:7%;
   margin-bottom:75px;
   background-color:#ffffdd;
   color:#000;
