--- a/work.html
+++ b/work.html
@@ -364,7 +364,7 @@ p a:hover{
   
   
 <!--START HTML CODE-->
- <body>
+  <body>
 <div class="container">
 <div id="header">
   <h1 class="animated swing"><a href="/">= o<span style="font-size:58px;"><sup>2</sup></span></a></h1>
@@ -440,6 +440,11 @@ p a:hover{
   </div> 
   </div>
   
+  </div>
+  
+  <div class="footer">
+    &copy; 2018 made in the jieuuniverse
+  </div>
   </body>
 <!--END HTML CODE-->
 
