--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@ p a:hover{
   padding:10%;
 }
 
-
+.row:before, .row:after {display: none !important;}
+	
 
 /*** START OF MEDIA QUERIES!!!! ***/
 @media screen and (min-width: 1280px) {
