--- a/work.html
+++ b/work.html
@@ -263,12 +263,7 @@ p a:hover{
   padding:10%;
 }
 
-/**
-Fixing bootstrap columns for safari
- */
-.row:before, .row:after{
- display: inline-block !important;
-}
+.row:before, .row:after {display: none !important;}
 
 
 /*** START OF MEDIA QUERIES!!!! ***/
