--- a/work.html
+++ b/work.html
@@ -420,7 +420,7 @@ p a:hover{
   </div>
   
  <div class="col-md-4">
-<img class="img-grid" src="https://images2.imgbox.com/ef/b6/VudL4h4s_o.jpg">
+	 <a href="/fairlyoddparents"><img class="img-grid" src="https://images2.imgbox.com/ef/b6/VudL4h4s_o.jpg"></a>
   </div> 
   
     <div class="col-md-4">
