--- a/about.html
+++ b/about.html
@@ -404,11 +404,11 @@ p a:hover{
 <i><span style="color:#fff; font-family: 'Shrikhand'; font-size:42px; -webkit-text-stroke: 1.25px black;
   text-shadow:-2px 2px 0 #000, -3px 3px 0 #ff0, -4px 4px 0 #000;">hello,</span></i>
     <br/><br/>
-    jieun hong with a capital 'E'!
+    JiEun Hong with a capital 'E'!
   <br/><br/>
-designed in seoul, south korea; assembled in california and packaged with a bfa (studio art) from nyu in new york. international shipping available!
+Designed in Seoul, South Korea; assembled in California and packaged with a BFA (Studio Art) from NYU in New York. International shipping available!
   <br/><br/>
-  <span style="font-size:12px; line-height:20px;">*warning: high amounts of strawberry cheesecake ice cream or flamin' hot ruffles will trigger endorphin overdose!</span> 
+  <span style="font-size:12px; line-height:20px;">*Warning: high amounts of strawberry cheesecake ice cream or Flamin' Hot Ruffles will trigger endorphin overdose!</span> 
   </div>
 </div>
   </div>
