--- a/about.html
+++ b/about.html
@@ -408,7 +408,7 @@ p a:hover{
   <br/><br/>
 Designed in Seoul, South Korea; assembled in California and packaged with a BFA (Studio Art) from NYU in New York. International shipping available!
   <br/><br/>
-  <span style="font-size:12px; line-height:20px;">*Warning: high amounts of strawberry cheesecake ice cream or Flamin' Hot Ruffles will trigger endorphin overdose!</span> 
+  <span style="font-size:12px; line-height:20px;">*warning: high amounts of strawberry cheesecake ice cream or Flamin' Hot Ruffles will trigger endorphin overdose!</span> 
   </div>
 </div>
   </div>
