--- a/work.html
+++ b/work.html
@@ -400,7 +400,7 @@ p a:hover{
 <div class="grid">
 <div class="row">
 <div class="col-md-4">
- <img class="img-grid" src="https://images2.imgbox.com/36/17/5ZY2CnO6_o.jpg">
+	<a href="/selftype"><img class="img-grid" src="https://images2.imgbox.com/36/17/5ZY2CnO6_o.jpg"></a>
 </div>
   
 <div class="col-md-4">
