--- a/work.html
+++ b/work.html
@@ -408,7 +408,7 @@ p a:hover{
 </div>
 
 <div class="col-md-4">
-  <img class="img-grid" src="https://images2.imgbox.com/90/3b/2ztd2gab_o.jpg">
+  <img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/90/3b/2ztd2gab_o.jpg">
 </div>
   </div>   
 
@@ -416,7 +416,7 @@ p a:hover{
   
 <div class="row">
   <div class="col-md-4">
-<img class="img-grid" src="https://images2.imgbox.com/55/01/XYGSIAl4_o.jpg">
+<img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/55/01/XYGSIAl4_o.jpg">
   </div>
   
  <div class="col-md-4">
@@ -424,7 +424,7 @@ p a:hover{
   </div> 
   
     <div class="col-md-4">
-      <img class="img-grid" src="https://images2.imgbox.com/9f/8c/ZrBjL798_o.jpg">
+      <img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/9f/8c/ZrBjL798_o.jpg">
   </div>
 </div>
 
