--- a/work.html
+++ b/work.html
@@ -408,7 +408,7 @@ p a:hover{
 </div>
 
 <div class="col-md-4">
-  <a href="/foodtype"><img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/90/3b/2ztd2gab_o.jpg"></a>
+  <a href="/foodtype"><img class="img-grid" src="https://images2.imgbox.com/90/3b/2ztd2gab_o.jpg"></a>
 </div>
   </div>   
 
