--- a/work.html
+++ b/work.html
@@ -424,7 +424,7 @@ p a:hover{
   </div> 
   
     <div class="col-md-4">
-      <img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/9f/8c/ZrBjL798_o.jpg">
+      <a href="/vbr"><img class="img-grid" src="https://images2.imgbox.com/9f/8c/ZrBjL798_o.jpg"></a>
   </div>
 </div>
 
