--- a/about.html
+++ b/about.html
@@ -45,6 +45,12 @@ body a{
  padding-top:10px; 
 }
 
+.col-md-7 a{
+  background-color:#ff0;
+  color:#000;
+  text-decoration:none;
+}
+	
 .about{
   position:relative;
   margin: auto;
@@ -406,7 +412,7 @@ p a:hover{
     <br/><br/>
     JiEun Hong with a capital 'E'!
   <br/><br/>
-Designed in Seoul, South Korea; assembled in California and packaged with a BFA (Studio Art) from NYU in New York. International shipping available!
+Designed in Seoul, South Korea; assembled in California and packaged with a BFA (Studio Art) from NYU in New York. International shipping available! Just drop me a message at <a href="mailto:jieun@nyu.edu">jieun@nyu.edu</a>!
   <br/><br/>
   <span style="font-size:12px; line-height:20px;">*warning: high amounts of strawberry cheesecake ice cream or Flamin' Hot Ruffles will trigger endorphin overdose!</span> 
   </div>
