--- a/magazine.html
+++ b/magazine.html
@@ -404,9 +404,9 @@ p a:hover{
   <div class="pimage" id="1">
   <img class="img-responsive" style="margin:auto;" src="https://images2.imgbox.com/88/7d/KxX6BGsB_o.jpg">
    <div class="desc">
-<i>Mmm</i> is a mini semi-monthly music magazine that features one influential artist per issue to give full coverage and ensure high quality of content. <i>Mmm</i> goes through an intensive screening process that requires thorough research and extensive knowledge of the Korean music industry before selecting the artist of the month.
+<i>Mmm</i> is a mini semi-monthly music magazine that features one influential artist per issue to give full coverage and ensure high quality of content. <i>Mmm</i> goes through an intensive screening process that requires thorough research and extensive knowledge of the Korean music industry before selecting the artists of the month.
      <br/><br/>
- <i>Mmm</i> is an all-inclusive publication, featuring artists from all music genres and statuses. Whether underground or internationally recognized, <i>Mmm</i> aims to promote talents who all have one thing in common: their love of music.
+As an all-inclusive publication, <i>Mmm</i> features artists from all music genres and statuses. Whether underground or internationally recognized, <i>Mmm</i>'s primary goal is to recognize talents who all share one thing in common: their genuine love for music.
  <div class="arrow">↯</div>
     </div>
     
