--- a/vbr.html
+++ b/vbr.html
@@ -412,6 +412,12 @@ For my senior thesis, I worked with a team of 10 other peers to establish a pop-
      Some promotional items for VonBrandt & Roe included email newsletters, flyers, social media banners, label stickers, and a 16-page full-color catalogue.
  <div class="arrow">↯</div>
     </div>
+	  
+<img class="img-responsive" style="margin:auto;" src="https://images2.imgbox.com/42/d1/oFrn00E2_o.jpg">
+   <div class="desc">
+A carefully selected color palette of primary and secondary colors to capture the essence of a newly established, yet refined contemporary auction house. Sans serif fonts with all caps accents were used to further highlight VonBrandt & Roe's millennial spirit and vision.
+ <div class="arrow">↯</div>
+    </div>
     
   <img class="img-responsive" style="margin:auto;" src="https://images2.imgbox.com/94/d3/ejMA0e2G_o.jpg">
    <br/><br/> 
