--- a/work.html
+++ b/work.html
@@ -427,6 +427,13 @@ p a:hover{
       <a href="/vbr"><img class="img-grid" src="https://images2.imgbox.com/9f/8c/ZrBjL798_o.jpg"></a>
   </div>
 </div>
+	
+	
+<div class="row">
+  <div class="col-md-4">
+ <img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/73/b4/5WTp7Fih_o.jpg">
+</div>
+  </div> 
 
   </div>
   
