--- a/work.html
+++ b/work.html
@@ -433,6 +433,10 @@ p a:hover{
   <div class="col-md-4">
  <img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/73/b4/5WTp7Fih_o.jpg">
 </div>
+	
+<div class="col-md-4">
+ <img class="img-grid" style="opacity:0.5;" src="https://images2.imgbox.com/67/0f/mcKyGlan_o.jpg">
+</div>
   </div> 
 
   </div>
