--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ p a:hover{
 <div class="arrow">↯</div>
     
 Creative human being a.k.a. JiEun!
-    <br/>Looking for opportunities to share my growing potential after recently wrapping up volunteering at the 2018 Pyeongchang Winter Olympics and Paralympics. <a style="background-color:#ff0; text-decoration:none; color:#000;" href="mailto:jieun@nyu.edu">E-mails</a> are always welcome.
+    <br/>Looking for design opportunities to share my growing potential after recently wrapping up volunteering at the 2018 Pyeongchang Winter Olympics and Paralympics. <a style="background-color:#ff0; text-decoration:none; color:#000;" href="mailto:jieun@nyu.edu">E-mails</a> are always welcome.
   </div>
   </div>
   
