--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@ body a{
 
 .footer{
   position: fixed;
-  bottom:10px;
+  padding-bottom:10px;
+  width:100%;
   color:#000;
   font-family: 'Roboto', sans-serif;
   font-weight:400i;
