--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body a{
 
 .footer{
   position: fixed;
-  padding-bottom:10px;
+  bottom:10px;
   width:100%;
   color:#000;
   font-family: 'Roboto', sans-serif;
