--- a/work.html
+++ b/work.html
@@ -431,7 +431,7 @@ p a:hover{
 	
 <div class="row">
   <div class="col-md-4">
- <img href="/rymanxthg" class="img-grid" src="images/ryman.png">
+	  <a href="/rymanxthg"><img class="img-grid" src="images/ryman.png"></a>
 </div>
 	
 <div class="col-md-4">
