--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -72,7 +72,7 @@ body a{
 
 .container{
   max-width:950px;
-  background-color:#fff;
+  background-color:#242424;
   padding-left:15px;
   padding-bottom:30px;
 }
@@ -402,7 +402,7 @@ p a:hover{
   
 <div class="projects">
   <div class="pimage" id="1">
-  <img class="img-responsive" style="margin:auto;" src="images/190401_3017_RymanArtsParentNight_Posters_WELCOME.jpg">
+  <img class="img-responsive" style="margin:auto; width:80%;" src="images/190401_3017_RymanArtsParentNight_Posters_WELCOME.jpg">
    <div class="desc">
 <i>Mmm</i> is a mini semi-monthly music magazine that features one influential artist per issue to give full coverage and ensure high quality of content. <i>Mmm</i> goes through an intensive screening process that requires thorough research and extensive knowledge of the Korean music industry before selecting the artists of the month.
      <br/><br/>
