--- a/rymanxthg.html
+++ b/rymanxthg.html
@@ -72,7 +72,7 @@ body a{
 
 .container{
   max-width:950px;
-  background-color:#242424;
+  background-color:#fff;
   padding-left:15px;
   padding-bottom:30px;
 }
@@ -206,6 +206,8 @@ p a:hover{
 .projects{
   position:relative;
   margin-top:7%;
+  background-color:#242424;
+  width:80%;
 }
 
 .pimageextra{
